# Hanger

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-compat.md
docs/cma-reference/: agents.json
examples/: 04_anthropic_sdk_dropin.py
scripts/: install.sh
src/hangar/: __init__.py  store.py
src/hangar/api/: app.py  deps.py  health.py  schemas.py
src/hangar/api/routes/: agents.py  api_keys.py  environments.py  events.py  health.py  sessions.py
src/hangar/auth/: audit.py  keys.py
src/hangar/cli/: main.py
src/hangar/db/: models.py  session.py
src/hangar/db/migrations/: env.py
src/hangar/db/migrations/versions/: 0001_initial.py
src/hangar/memory/: base.py  flat.py
src/hangar/runtime/: agent_runner.py  container.py  harness.py
src/hangar/static/: dashboard.css  dashboard.html  dashboard.js
src/hangar/streaming/: pubsub.py  sse.py
src/hangar/utils/: ids.py  time.py
src/hangar/workflows/: runtime.py  session.py  steps.py
tests/: conftest.py  helpers.py  test_agents.py  test_auth.py  test_cli.py  test_compat_anthropic_sdk.py  test_container.py  test_dashboard.py  test_durability.py  test_environments.py  test_events.py  test_events_sse.py  test_health.py  test_sessions.py
